--- a/.env
+++ b/.env
@@ -17,3 +17,14 @@
 APP_ENV=dev
 APP_SECRET=a25a42331de3e07fbbabf703adc5067c
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="postgresql://symfony:password@localhost:5432/malta_app?serverVersion=12&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+API_TOKEN=SOME_API_TOKEN
